<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".admin">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_weight="0" />

    <ImageView
        android:id="@+id/cloud_fetch_checklist_data"
        android:layout_width="250dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_weight="2"
        android:background="@drawable/ic_baseline_admin_panel"
        android:contentDescription="@string/todo"
        android:orientation="vertical" />

    <Button
        android:id="@+id/admin_modify_checklist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/modify_checklist"
        android:textSize="20sp" />

    <Button
        android:id="@+id/admin_user_performance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/see_users_performance"
        android:textSize="20sp" />

    <Button
        android:id="@+id/admin_client_requests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/client_requests"
        android:textSize="20sp" />

    <Button
        android:id="@+id/admin_pending_auditor_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pending_rejected_list"
        android:textSize="20sp"
        android:visibility="visible" />
    <Button
        android:id="@+id/admin_approved_auditor_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/approved_audits"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/admin_rejected_auditor_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/rejected_auditor_list"
        android:textSize="20sp"
        android:visibility="visible" />

</LinearLayout>