<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context="Controller_Classes.admin_client_list">

        <LinearLayout
            android:id="@+id/auditor_top_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#0000"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/auditor_screen_image"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/client_assign" />

            <TextView
                android:id="@+id/auditor_assign_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_sans_light"
                android:text="@string/assign_auditor"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/assign_auditor_Empty"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:textSize="19sp"
            android:textColor="#FF0000"
            android:gravity="center"
            android:text="@string/empty" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/admin_client_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/assign_auditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/nunito_sans_light"
            android:textStyle="bold"
            android:text="@string/assign"
            android:textColor="@color/white"
            android:textSize="15sp" />
</LinearLayout>