<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_theme1"
    tools:context=".Admin_Checklist">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <TextView
        android:id="@+id/admin_ChekLIst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="179dp"
        android:fontFamily="@font/nunito_sans_light"
        android:text="@string/checklist"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/admin_linearLayout_checklist"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_ChekLIst"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="15dp"
        android:fitsSystemWindows="true"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/modify_checklist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/delete"
            android:textSize="17sp" />
        <Button
            android:id="@+id/save_checklist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/save"
            android:textSize="17sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>