<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in_AdminKT">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399">

        <TextView
            android:id="@+id/Sign_In_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:clickable="true"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enter_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/nunito_sans_light"
            android:gravity="center"
            android:text="@string/kindly_enter_passcode"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passcode_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_passcode"
            android:inputType="textPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/sign_in_button_admin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:background="@drawable/button"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/admin_wrong_credentials"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/nunito_sans_light"
            android:gravity="center"
            android:text="@string/wrong_credentials"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/sign_in_admin_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>